--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                       </div>
                   </div>
                   <div class="swiper-slide">
-                    <img src="img/menu6.jpg">
+                    <img src="members/shreya.jpeg">
                     <div class="details">
                         <h3>Shreya<br><span>Developer</span></h3>
                       </div>
